
[TestNoDeprecatedRule/invalid-0 - 1]
Diagnostic 1: deprecated (11:22 - 11:22)
Message: `b` is deprecated.
  10 | 
  11 |         const a = <A b="" />;
     |                      ~
  12 |       
---

[TestNoDeprecatedRule/invalid-1 - 1]
Diagnostic 1: deprecated (3:9 - 3:9)
Message: `a` is deprecated.
   2 |         /** @deprecated */ var a = undefined;
   3 |         a;
     |         ~
   4 |       
---

[TestNoDeprecatedRule/invalid-2 - 1]
Diagnostic 1: deprecated (3:9 - 3:9)
Message: `a` is deprecated.
   2 |         /** @deprecated */ export var a = undefined;
   3 |         a;
     |         ~
   4 |       
---

[TestNoDeprecatedRule/invalid-3 - 1]
Diagnostic 1: deprecated (3:9 - 3:9)
Message: `a` is deprecated.
   2 |         /** @deprecated */ let a = undefined;
   3 |         a;
     |         ~
   4 |       
---

[TestNoDeprecatedRule/invalid-4 - 1]
Diagnostic 1: deprecated (3:9 - 3:9)
Message: `a` is deprecated.
   2 |         /** @deprecated */ export let a = undefined;
   3 |         a;
     |         ~
   4 |       
---

[TestNoDeprecatedRule/invalid-5 - 1]
Diagnostic 1: deprecated (3:9 - 3:17)
Message: `aLongName` is deprecated.
   2 |         /** @deprecated */ let aLongName = undefined;
   3 |         aLongName;
     |         ~~~~~~~~~
   4 |       
---

[TestNoDeprecatedRule/invalid-6 - 1]
Diagnostic 1: deprecated (3:19 - 3:19)
Message: `a` is deprecated.
   2 |         /** @deprecated */ const a = { b: 1 };
   3 |         const c = a;
     |                   ~
   4 |       
---

[TestNoDeprecatedRule/invalid-7 - 1]
Diagnostic 1: deprecated (3:19 - 3:19)
Message: `a` is deprecated.
   2 |         /** @deprecated Reason. */ const a = { b: 1 };
   3 |         const c = a;
     |                   ~
   4 |       
---

[TestNoDeprecatedRule/invalid-8 - 1]
Diagnostic 1: deprecated (3:21 - 3:21)
Message: `a` is deprecated.
   2 |         /** @deprecated */ const a = { b: 1 };
   3 |         const { c = a } = {};
     |                     ~
   4 |       
---

[TestNoDeprecatedRule/invalid-9 - 1]
Diagnostic 1: deprecated (3:20 - 3:20)
Message: `a` is deprecated.
   2 |         /** @deprecated */ const a = { b: 1 };
   3 |         const [c = a] = [];
     |                    ~
   4 |       
---

[TestNoDeprecatedRule/invalid-10 - 1]
Diagnostic 1: deprecated (3:21 - 3:21)
Message: `a` is deprecated.
   2 |         /** @deprecated */ const a = { b: 1 };
   3 |         console.log(a);
     |                     ~
   4 |       
---

[TestNoDeprecatedRule/invalid-11 - 1]
Diagnostic 1: deprecated (3:26 - 3:26)
Message: `a` is deprecated.
   2 |         /** @deprecated */ const a = 'foo';
   3 |         import(`./path/${a}.js`);
     |                          ~
   4 |       
---

[TestNoDeprecatedRule/invalid-12 - 1]
Diagnostic 1: deprecated (6:13 - 6:13)
Message: `a` is deprecated.
   5 | 
   6 |         log(a);
     |             ~
   7 |       
---

[TestNoDeprecatedRule/invalid-13 - 1]
Diagnostic 1: deprecated (3:21 - 3:21)
Message: `a` is deprecated.
   2 |         /** @deprecated */ const a = { b: 1 };
   3 |         console.log(a.b);
     |                     ~
   4 |       
---

[TestNoDeprecatedRule/invalid-14 - 1]
Diagnostic 1: deprecated (3:21 - 3:21)
Message: `a` is deprecated.
   2 |         /** @deprecated */ const a = { b: 1 };
   3 |         console.log(a?.b);
     |                     ~
   4 |       
---

[TestNoDeprecatedRule/invalid-15 - 1]
Diagnostic 1: deprecated (3:9 - 3:9)
Message: `a` is deprecated.
   2 |         /** @deprecated */ const a = { b: { c: 1 } };
   3 |         a.b.c;
     |         ~
   4 |       
---

[TestNoDeprecatedRule/invalid-16 - 1]
Diagnostic 1: deprecated (3:9 - 3:9)
Message: `a` is deprecated.
   2 |         /** @deprecated */ const a = { b: { c: 1 } };
   3 |         a.b?.c;
     |         ~
   4 |       
---

[TestNoDeprecatedRule/invalid-17 - 1]
Diagnostic 1: deprecated (3:9 - 3:9)
Message: `a` is deprecated.
   2 |         /** @deprecated */ const a = { b: { c: 1 } };
   3 |         a?.b?.c;
     |         ~
   4 |       
---

[TestNoDeprecatedRule/invalid-18 - 1]
Diagnostic 1: deprecated (5:11 - 5:11)
Message: `b` is deprecated.
   4 |         };
   5 |         a.b.c;
     |           ~
   6 |       
---

[TestNoDeprecatedRule/invalid-19 - 1]
Diagnostic 1: deprecated (5:11 - 5:11)
Message: `b` is deprecated.
   4 |         };
   5 |         a.b.c;
     |           ~
   6 |       
---

[TestNoDeprecatedRule/invalid-20 - 1]
Diagnostic 1: deprecated (3:19 - 3:19)
Message: `a` is deprecated.
   2 |         /** @deprecated */ const a = { b: 1 };
   3 |         const c = a.b;
     |                   ~
   4 |       
---

[TestNoDeprecatedRule/invalid-21 - 1]
Diagnostic 1: deprecated (3:23 - 3:23)
Message: `a` is deprecated.
   2 |         /** @deprecated */ const a = { b: 1 };
   3 |         const { c } = a.b;
     |                       ~
   4 |       
---

[TestNoDeprecatedRule/invalid-22 - 1]
Diagnostic 1: deprecated (5:17 - 5:20)
Message: `test` is deprecated.
   4 |         const myObj = {
   5 |           prop: test,
     |                 ~~~~
   6 |           deep: {

Diagnostic 2: deprecated (7:19 - 7:22)
Message: `test` is deprecated.
   6 |           deep: {
   7 |             prop: test,
     |                   ~~~~
   8 |           },
---

[TestNoDeprecatedRule/invalid-23 - 1]
Diagnostic 1: deprecated (5:11 - 5:14)
Message: `test` is deprecated.
   4 |         const bar = {
   5 |           test,
     |           ~~~~
   6 |         };
---

[TestNoDeprecatedRule/invalid-24 - 1]
Diagnostic 1: deprecated (3:29 - 3:29)
Message: `a` is deprecated.
   2 |         /** @deprecated */ const a = { b: 1 };
   3 |         const { c = 'd' } = a.b;
     |                             ~
   4 |       
---

[TestNoDeprecatedRule/invalid-25 - 1]
Diagnostic 1: deprecated (3:26 - 3:26)
Message: `a` is deprecated.
   2 |         /** @deprecated */ const a = { b: 1 };
   3 |         const { c: d } = a.b;
     |                          ~
   4 |       
---

[TestNoDeprecatedRule/invalid-26 - 1]
Diagnostic 1: deprecated (4:22 - 4:22)
Message: `a` is deprecated.
   3 |         declare const a: string[];
   4 |         const [b] = [a];
     |                      ~
   5 |       
---

[TestNoDeprecatedRule/invalid-27 - 1]
Diagnostic 1: deprecated (5:13 - 5:13)
Message: `A` is deprecated.
   4 | 
   5 |         new A();
     |             ~
   6 |       
---

[TestNoDeprecatedRule/invalid-28 - 1]
Diagnostic 1: deprecated (5:13 - 5:13)
Message: `A` is deprecated.
   4 | 
   5 |         new A();
     |             ~
   6 |       
---

[TestNoDeprecatedRule/invalid-29 - 1]
Diagnostic 1: deprecated (5:13 - 5:13)
Message: `A` is deprecated.
   4 | 
   5 |         new A();
     |             ~
   6 |       
---

[TestNoDeprecatedRule/invalid-30 - 1]
Diagnostic 1: deprecated (5:13 - 5:13)
Message: `A` is deprecated.
   4 | 
   5 |         new A();
     |             ~
   6 |       
---

[TestNoDeprecatedRule/invalid-31 - 1]
Diagnostic 1: deprecated (7:13 - 7:13)
Message: `A` is deprecated.
   6 | 
   7 |         new A();
     |             ~
   8 |       
---

[TestNoDeprecatedRule/invalid-32 - 1]
Diagnostic 1: deprecated (9:13 - 9:13)
Message: `A` is deprecated.
   8 | 
   9 |         new A();
     |             ~
  10 |       
---

[TestNoDeprecatedRule/invalid-33 - 1]
Diagnostic 1: deprecated (7:13 - 7:13)
Message: `A` is deprecated.
   6 | 
   7 |         new A();
     |             ~
   8 |       
---

[TestNoDeprecatedRule/invalid-34 - 1]
Diagnostic 1: deprecated (7:13 - 7:13)
Message: `A` is deprecated.
   6 | 
   7 |         new A();
     |             ~
   8 |       
---

[TestNoDeprecatedRule/invalid-35 - 1]
Diagnostic 1: deprecated (9:17 - 9:17)
Message: `b` is deprecated.
   8 | 
   9 |         const { b } = a;
     |                 ~
  10 |       
---

[TestNoDeprecatedRule/invalid-36 - 1]
Diagnostic 1: deprecated (9:11 - 9:11)
Message: `b` is deprecated.
   8 | 
   9 |         a.b;
     |           ~
  10 |       
---

[TestNoDeprecatedRule/invalid-37 - 1]
Diagnostic 1: deprecated (9:11 - 9:11)
Message: `b` is deprecated.
   8 | 
   9 |         a.b();
     |           ~
  10 |       
---

[TestNoDeprecatedRule/invalid-38 - 1]
Diagnostic 1: deprecated (9:11 - 9:11)
Message: `b` is deprecated.
   8 | 
   9 |         a.b;
     |           ~
  10 |       
---

[TestNoDeprecatedRule/invalid-39 - 1]
Diagnostic 1: deprecated (9:11 - 9:11)
Message: `b` is deprecated.
   8 | 
   9 |         a.b();
     |           ~
  10 |       
---

[TestNoDeprecatedRule/invalid-40 - 1]
Diagnostic 1: deprecated (9:11 - 9:11)
Message: `b` is deprecated.
   8 | 
   9 |         a.b();
     |           ~
  10 |       
---

[TestNoDeprecatedRule/invalid-41 - 1]
Diagnostic 1: deprecated (11:11 - 11:11)
Message: `b` is deprecated.
  10 | 
  11 |         a.b();
     |           ~
  12 |       
---

[TestNoDeprecatedRule/invalid-42 - 1]
Diagnostic 1: deprecatedWithReason (10:11 - 10:11)
Message: `b` is deprecated. Use b(value).
   9 | 
  10 |         a.b();
     |           ~
  11 |       
---

[TestNoDeprecatedRule/invalid-43 - 1]
Diagnostic 1: deprecated (7:11 - 7:11)
Message: `b` is deprecated.
   6 | 
   7 |         A.b;
     |           ~
   8 |       
---

[TestNoDeprecatedRule/invalid-44 - 1]
Diagnostic 1: deprecated (7:11 - 7:11)
Message: `b` is deprecated.
   6 | 
   7 |         a.b;
     |           ~
   8 |       
---

[TestNoDeprecatedRule/invalid-45 - 1]
Diagnostic 1: deprecated (9:11 - 9:11)
Message: `b` is deprecated.
   8 | 
   9 |         a.b;
     |           ~
  10 |       
---

[TestNoDeprecatedRule/invalid-46 - 1]
Diagnostic 1: deprecated (9:11 - 9:11)
Message: `b` is deprecated.
   8 | 
   9 |         a.b;
     |           ~
  10 |       
---

[TestNoDeprecatedRule/invalid-47 - 1]
Diagnostic 1: deprecated (9:17 - 9:17)
Message: `b` is deprecated.
   8 | 
   9 |         const { b } = a;
     |                 ~
  10 |       
---

[TestNoDeprecatedRule/invalid-48 - 1]
Diagnostic 1: deprecated (9:17 - 9:17)
Message: `b` is deprecated.
   8 | 
   9 |         const { b } = a;
     |                 ~
  10 |       
---

[TestNoDeprecatedRule/invalid-49 - 1]
Diagnostic 1: deprecated (9:17 - 9:17)
Message: `b` is deprecated.
   8 | 
   9 |         const { b } = a;
     |                 ~
  10 |       
---

[TestNoDeprecatedRule/invalid-50 - 1]
Diagnostic 1: deprecated (9:17 - 9:17)
Message: `b` is deprecated.
   8 | 
   9 |         const { b } = a();
     |                 ~
  10 |       
---

[TestNoDeprecatedRule/invalid-51 - 1]
Diagnostic 1: deprecated (5:26 - 5:26)
Message: `A` is deprecated.
   4 | 
   5 |         declare const a: A;
     |                          ~
   6 | 
---

[TestNoDeprecatedRule/invalid-52 - 1]
Diagnostic 1: deprecated (7:11 - 7:11)
Message: `b` is deprecated.
   6 | 
   7 |         A.b;
     |           ~
   8 |       
---

[TestNoDeprecatedRule/invalid-53 - 1]
Diagnostic 1: deprecated (7:11 - 7:11)
Message: `b` is deprecated.
   6 | 
   7 |         A.b;
     |           ~
   8 |       
---

[TestNoDeprecatedRule/invalid-54 - 1]
Diagnostic 1: deprecated (7:11 - 7:11)
Message: `b` is deprecated.
   6 | 
   7 |         A.b();
     |           ~
   8 |       
---

[TestNoDeprecatedRule/invalid-55 - 1]
Diagnostic 1: deprecatedWithReason (8:16 - 8:19)
Message: `fail` is deprecated. since v10.0.0 - use fail([message]) or other assert functions instead.
   7 | 
   8 |         assert.fail({}, {});
     |                ~~~~
   9 |       
---

[TestNoDeprecatedRule/invalid-56 - 1]
Diagnostic 1: deprecatedWithReason (4:16 - 4:19)
Message: `fail` is deprecated. since v10.0.0 - use fail([message]) or other assert functions instead.
   3 | 
   4 |         assert.fail({}, {});
     |                ~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-57 - 1]
Diagnostic 1: deprecated (7:9 - 7:9)
Message: `A` is deprecated.
   6 | 
   7 |         A.a;
     |         ~
   8 |       
---

[TestNoDeprecatedRule/invalid-58 - 1]
Diagnostic 1: deprecated (7:11 - 7:11)
Message: `a` is deprecated.
   6 | 
   7 |         A.a;
     |           ~
   8 |       
---

[TestNoDeprecatedRule/invalid-59 - 1]
Diagnostic 1: deprecated (5:9 - 5:9)
Message: `a` is deprecated.
   4 | 
   5 |         a();
     |         ~
   6 |       
---

[TestNoDeprecatedRule/invalid-60 - 1]
Diagnostic 1: deprecated (6:9 - 6:9)
Message: `a` is deprecated.
   5 | 
   6 |         a();
     |         ~
   7 |       
---

[TestNoDeprecatedRule/invalid-61 - 1]
Diagnostic 1: deprecated (7:9 - 7:9)
Message: `a` is deprecated.
   6 | 
   7 |         a('');
     |         ~
   8 |       
---

[TestNoDeprecatedRule/invalid-62 - 1]
Diagnostic 1: deprecated (8:9 - 8:11)
Message: `foo` is deprecated.
   7 |         declare const foo: A;
   8 |         foo('c');
     |         ~~~
   9 |       
---

[TestNoDeprecatedRule/invalid-63 - 1]
Diagnostic 1: deprecated (6:18 - 6:18)
Message: `b` is deprecated.
   5 |         ) {
   6 |           return b;
     |                  ~
   7 |         }
---

[TestNoDeprecatedRule/invalid-64 - 1]
Diagnostic 1: deprecatedWithReason (10:15 - 10:24)
Message: `isReceiver` is deprecated. This param is not used and will be removed in the future.
   9 | 
  10 |           if (isReceiver && flags & ANY_OR_UNKNOWN) {
     |               ~~~~~~~~~~
  11 |             return true;
---

[TestNoDeprecatedRule/invalid-65 - 1]
Diagnostic 1: deprecated (5:9 - 5:9)
Message: `a` is deprecated.
   4 | 
   5 |         a``;
     |         ~
   6 |       
---

[TestNoDeprecatedRule/invalid-66 - 1]
Diagnostic 1: deprecated (5:20 - 5:20)
Message: `A` is deprecated.
   4 | 
   5 |         const a = <A />;
     |                    ~
   6 |       
---

[TestNoDeprecatedRule/invalid-67 - 1]
Diagnostic 1: deprecated (5:20 - 5:20)
Message: `A` is deprecated.
   4 | 
   5 |         const a = <A></A>;
     |                    ~
   6 |       
---

[TestNoDeprecatedRule/invalid-68 - 1]
Diagnostic 1: deprecated (7:20 - 7:20)
Message: `A` is deprecated.
   6 | 
   7 |         const a = <A />;
     |                    ~
   8 |       
---

[TestNoDeprecatedRule/invalid-69 - 1]
Diagnostic 1: deprecated (7:20 - 7:20)
Message: `A` is deprecated.
   6 | 
   7 |         const a = <A></A>;
     |                    ~
   8 |       
---

[TestNoDeprecatedRule/invalid-70 - 1]
Diagnostic 1: deprecated (7:25 - 7:25)
Message: `A` is deprecated.
   6 | 
   7 |         export type D = A | B | C;
     |                         ~
   8 |       
---

[TestNoDeprecatedRule/invalid-71 - 1]
Diagnostic 1: deprecated (9:27 - 9:27)
Message: `B` is deprecated.
   8 | 
   9 |         export type D = A.B | A.C | A.D;
     |                           ~
  10 |       
---

[TestNoDeprecatedRule/invalid-72 - 1]
Diagnostic 1: deprecated (7:17 - 7:22)
Message: `anchor` is deprecated.
   6 |         declare const x: Props;
   7 |         const { anchor = '' } = x;
     |                 ~~~~~~
   8 |       
---

[TestNoDeprecatedRule/invalid-73 - 1]
Diagnostic 1: deprecated (8:18 - 8:23)
Message: `anchor` is deprecated.
   7 |         const {
   8 |           bar: { anchor = '' },
     |                  ~~~~~~
   9 |         } = x;
---

[TestNoDeprecatedRule/invalid-74 - 1]
Diagnostic 1: deprecated (7:18 - 7:23)
Message: `anchor` is deprecated.
   6 |         declare const x: [item: Props];
   7 |         const [{ anchor = 'bar' }] = x;
     |                  ~~~~~~
   8 |       
---

[TestNoDeprecatedRule/invalid-75 - 1]
Diagnostic 1: deprecated (7:17 - 7:19)
Message: `foo` is deprecated.
   6 |         declare const x: Props;
   7 |         const { foo = x } = x;
     |                 ~~~
   8 |       
---

[TestNoDeprecatedRule/invalid-76 - 1]
Diagnostic 1: deprecated (4:25 - 4:39)
Message: `DeprecatedClass` is deprecated.
   3 | 
   4 |         const foo = new DeprecatedClass();
     |                         ~~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-77 - 1]
Diagnostic 1: deprecated (6:16 - 6:30)
Message: `DeprecatedClass` is deprecated.
   5 | 
   6 |         inject(DeprecatedClass);
     |                ~~~~~~~~~~~~~~~
   7 |       
---

[TestNoDeprecatedRule/invalid-78 - 1]
Diagnostic 1: deprecated (4:21 - 4:38)
Message: `deprecatedVariable` is deprecated.
   3 | 
   4 |         const foo = deprecatedVariable;
     |                     ~~~~~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-79 - 1]
Diagnostic 1: deprecated (4:26 - 4:40)
Message: `DeprecatedClass` is deprecated.
   3 | 
   4 |         declare const x: DeprecatedClass;
     |                          ~~~~~~~~~~~~~~~
   5 | 

Diagnostic 2: deprecated (6:17 - 6:19)
Message: `foo` is deprecated.
   5 | 
   6 |         const { foo } = x;
     |                 ~~~
   7 |       
---

[TestNoDeprecatedRule/invalid-80 - 1]
Diagnostic 1: deprecated (4:9 - 4:26)
Message: `deprecatedFunction` is deprecated.
   3 | 
   4 |         deprecatedFunction();
     |         ~~~~~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-81 - 1]
Diagnostic 1: deprecated (4:34 - 4:44)
Message: `NormalClass` is deprecated.
   3 | 
   4 |         const foo = new imported.NormalClass();
     |                                  ~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-82 - 1]
Diagnostic 1: deprecated (4:25 - 4:35)
Message: `NormalClass` is deprecated.
   3 | 
   4 |         const foo = new NormalClass();
     |                         ~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-83 - 1]
Diagnostic 1: deprecated (4:30 - 4:40)
Message: `NormalClass` is deprecated.
   3 | 
   4 |         const foo = imported.NormalClass;
     |                              ~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-84 - 1]
Diagnostic 1: deprecated (4:21 - 4:31)
Message: `NormalClass` is deprecated.
   3 | 
   4 |         const foo = NormalClass;
     |                     ~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-85 - 1]
Diagnostic 1: deprecated (4:21 - 4:34)
Message: `normalVariable` is deprecated.
   3 | 
   4 |         const foo = normalVariable;
     |                     ~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-86 - 1]
Diagnostic 1: deprecated (4:30 - 4:43)
Message: `normalVariable` is deprecated.
   3 | 
   4 |         const foo = imported.normalVariable;
     |                              ~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-87 - 1]
Diagnostic 1: deprecated (4:17 - 4:30)
Message: `normalVariable` is deprecated.
   3 | 
   4 |         const { normalVariable } = imported;
     |                 ~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-88 - 1]
Diagnostic 1: deprecated (5:22 - 5:39)
Message: `deprecatedVariable` is deprecated.
   4 |         const test = {
   5 |           someField: deprecatedVariable,
     |                      ~~~~~~~~~~~~~~~~~~
   6 |         };
---

[TestNoDeprecatedRule/invalid-89 - 1]
Diagnostic 1: deprecated (4:21 - 4:34)
Message: `normalFunction` is deprecated.
   3 | 
   4 |         const foo = normalFunction;
     |                     ~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-90 - 1]
Diagnostic 1: deprecated (4:30 - 4:43)
Message: `normalFunction` is deprecated.
   3 | 
   4 |         const foo = imported.normalFunction;
     |                              ~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-91 - 1]
Diagnostic 1: deprecated (4:17 - 4:30)
Message: `normalFunction` is deprecated.
   3 | 
   4 |         const { normalFunction } = imported;
     |                 ~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-92 - 1]
Diagnostic 1: deprecated (4:21 - 4:34)
Message: `normalFunction` is deprecated.
   3 | 
   4 |         const foo = normalFunction();
     |                     ~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-93 - 1]
Diagnostic 1: deprecated (4:30 - 4:43)
Message: `normalFunction` is deprecated.
   3 | 
   4 |         const foo = imported.normalFunction();
     |                              ~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-94 - 1]
Diagnostic 1: deprecated (4:21 - 4:51)
Message: `deprecatedFunctionWithOverloads` is deprecated.
   3 | 
   4 |         const foo = deprecatedFunctionWithOverloads('a');
     |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-95 - 1]
Diagnostic 1: deprecated (4:30 - 4:60)
Message: `deprecatedFunctionWithOverloads` is deprecated.
   3 | 
   4 |         const foo = imported.deprecatedFunctionWithOverloads('a');
     |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-103 - 1]
Diagnostic 1: deprecated (4:25 - 4:54)
Message: `ClassWithDeprecatedConstructor` is deprecated.
   3 | 
   4 |         const foo = new ClassWithDeprecatedConstructor('a');
     |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-104 - 1]
Diagnostic 1: deprecated (4:34 - 4:63)
Message: `ClassWithDeprecatedConstructor` is deprecated.
   3 | 
   4 |         const foo = new imported.ClassWithDeprecatedConstructor('a');
     |                                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-105 - 1]
Diagnostic 1: deprecatedWithReason (4:21 - 4:60)
Message: `ReexportedClassWithDeprecatedConstructor` is deprecated. Reason
   3 | 
   4 |         const foo = ReexportedClassWithDeprecatedConstructor;
     |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-106 - 1]
Diagnostic 1: deprecatedWithReason (4:30 - 4:69)
Message: `ReexportedClassWithDeprecatedConstructor` is deprecated. Reason
   3 | 
   4 |         const foo = imported.ReexportedClassWithDeprecatedConstructor;
     |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-107 - 1]
Diagnostic 1: deprecatedWithReason (4:17 - 4:56)
Message: `ReexportedClassWithDeprecatedConstructor` is deprecated. Reason
   3 | 
   4 |         const { ReexportedClassWithDeprecatedConstructor } = imported;
     |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-108 - 1]
Diagnostic 1: deprecatedWithReason (4:21 - 4:60)
Message: `ReexportedClassWithDeprecatedConstructor` is deprecated. Reason
   3 | 
   4 |         const foo = ReexportedClassWithDeprecatedConstructor();
     |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-109 - 1]
Diagnostic 1: deprecatedWithReason (4:30 - 4:69)
Message: `ReexportedClassWithDeprecatedConstructor` is deprecated. Reason
   3 | 
   4 |         const foo = imported.ReexportedClassWithDeprecatedConstructor();
     |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-110 - 1]
Diagnostic 1: deprecatedWithReason (4:21 - 4:60)
Message: `ReexportedClassWithDeprecatedConstructor` is deprecated. Reason
   3 | 
   4 |         const foo = ReexportedClassWithDeprecatedConstructor('a');
     |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-111 - 1]
Diagnostic 1: deprecatedWithReason (4:30 - 4:69)
Message: `ReexportedClassWithDeprecatedConstructor` is deprecated. Reason
   3 | 
   4 |         const foo = imported.ReexportedClassWithDeprecatedConstructor('a');
     |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-113 - 1]
Diagnostic 1: deprecated (4:13 - 4:19)
Message: `default` is deprecated.
   3 |           const d = await import('./deprecated.js');
   4 |           d.default.default;
     |             ~~~~~~~
   5 |         }
---

[TestNoDeprecatedRule/invalid-114 - 1]
Diagnostic 1: deprecated (5:30 - 5:32)
Message: `Foo` is deprecated.
   4 | 
   5 |         class Bar implements Foo {}
     |                              ~~~
   6 |       
---

[TestNoDeprecatedRule/invalid-115 - 1]
Diagnostic 1: deprecated (5:37 - 5:39)
Message: `Foo` is deprecated.
   4 | 
   5 |         export class Bar implements Foo {}
     |                                     ~~~
   6 |       
---

[TestNoDeprecatedRule/invalid-116 - 1]
Diagnostic 1: deprecated (7:42 - 7:44)
Message: `Foo` is deprecated.
   6 | 
   7 |         export class Bar implements Baz, Foo {}
     |                                          ~~~
   8 |       
---

[TestNoDeprecatedRule/invalid-117 - 1]
Diagnostic 1: deprecated (5:34 - 5:36)
Message: `Foo` is deprecated.
   4 | 
   5 |         export class Bar extends Foo {}
     |                                  ~~~
   6 |       
---

[TestNoDeprecatedRule/invalid-118 - 1]
Diagnostic 1: deprecated (5:10 - 5:18)
Message: `decorator` is deprecated.
   4 | 
   5 |         @decorator
     |          ~~~~~~~~~
   6 |         export class Foo {}
---

[TestNoDeprecatedRule/invalid-119 - 1]
Diagnostic 1: deprecated (7:24 - 7:24)
Message: `a` is deprecated.
   6 | 
   7 |         export default a();
     |                        ~
   8 |       
---

[TestNoDeprecatedRule/invalid-120 - 1]
Diagnostic 1: deprecated (10:5 - 10:9)
Message: `super` is deprecated.
   9 |     /** should report but does not */
  10 |     super();
     |     ~~~~~
  11 |   }
---

[TestNoDeprecatedRule/invalid-121 - 1]
Diagnostic 1: deprecatedWithReason (10:5 - 10:9)
Message: `super` is deprecated. test reason
   9 |     /** should report but does not */
  10 |     super();
     |     ~~~~~
  11 |   }
---

[TestNoDeprecatedRule/invalid-125 - 1]
Diagnostic 1: deprecatedWithReason (3:1 - 3:6)
Message: `exists` is deprecated. Since v1.0.0 - Use  or  instead.
   2 | import { exists } from 'fs';
   3 | exists('/foo');
     | ~~~~~~
   4 |       
---

[TestNoDeprecatedRule/invalid-126 - 1]
Diagnostic 1: deprecated (9:11 - 9:11)
Message: `b` is deprecated.
   8 | 
   9 |         a.b;
     |           ~
  10 |       
---

[TestNoDeprecatedRule/invalid-127 - 1]
Diagnostic 1: deprecated (9:11 - 9:11)
Message: `b` is deprecated.
   8 | 
   9 |         a.b();
     |           ~
  10 |       
---

[TestNoDeprecatedRule/invalid-128 - 1]
Diagnostic 1: deprecated (11:11 - 11:11)
Message: `b` is deprecated.
  10 | 
  11 |         a.b();
     |           ~
  12 |       
---

[TestNoDeprecatedRule/invalid-129 - 1]
Diagnostic 1: deprecated (7:11 - 7:11)
Message: `b` is deprecated.
   6 | 
   7 |         A.b();
     |           ~
   8 |       
---

[TestNoDeprecatedRule/invalid-130 - 1]
Diagnostic 1: deprecated (7:18 - 7:19)
Message: `##b` is deprecated.
   6 |           c() {
   7 |             this.#b();
     |                  ~~
   8 |           }
---

[TestNoDeprecatedRule/invalid-131 - 1]
Diagnostic 1: deprecated (7:21 - 7:23)
Message: `b` is deprecated.
   6 | 
   7 |         const c = a['b'];
     |                     ~~~
   8 |       
---

[TestNoDeprecatedRule/invalid-132 - 1]
Diagnostic 1: deprecated (7:21 - 7:21)
Message: `b` is deprecated.
   6 |         const x = 'b';
   7 |         const c = a[x];
     |                     ~
   8 |       
---

[TestNoDeprecatedRule/invalid-133 - 1]
Diagnostic 1: deprecated (7:21 - 7:21)
Message: `2` is deprecated.
   6 |         const x = 'b';
   7 |         const c = a[2];
     |                     ~
   8 |       
---

[TestNoDeprecatedRule/invalid-134 - 1]
Diagnostic 1: deprecatedWithReason (9:21 - 9:29)
Message: `b` is deprecated. reason for deprecation
   8 |         const stringKey = key as const;
   9 |         const c = a[stringKey];
     |                     ~~~~~~~~~
  10 |       
---

[TestNoDeprecatedRule/invalid-135 - 1]
Diagnostic 1: deprecatedWithReason (12:21 - 12:23)
Message: `b` is deprecated. reason for deprecation
  11 |         const key = Keys.B;
  12 |         const c = a[key];
     |                     ~~~
  13 |       
---

[TestNoDeprecatedRule/invalid-136 - 1]
Diagnostic 1: deprecated (8:21 - 8:23)
Message: `b` is deprecated.
   7 |         const key = `b`;
   8 |         const c = a[key];
     |                     ~~~
   9 |       
---

[TestNoDeprecatedRule/invalid-137 - 1]
Diagnostic 1: deprecated (7:21 - 7:29)
Message: `b` is deprecated.
   6 |         };
   7 |         const c = a[stringObj];
     |                     ~~~~~~~~~
   8 |       
---

[TestNoDeprecatedRule/invalid-138 - 1]
Diagnostic 1: deprecated (4:18 - 4:35)
Message: `deprecatedFunction` is deprecated.
   3 | 
   4 |         export { deprecatedFunction };
     |                  ~~~~~~~~~~~~~~~~~~
   5 |       
---

[TestNoDeprecatedRule/invalid-139 - 1]
Diagnostic 1: deprecated (2:18 - 2:35)
Message: `deprecatedFunction` is deprecated.
   1 | 
   2 |         export { deprecatedFunction } from './deprecated';
     |                  ~~~~~~~~~~~~~~~~~~
   3 |       
---

[TestNoDeprecatedRule/invalid-140 - 1]
Diagnostic 1: deprecatedWithReason (2:23 - 2:23)
Message: `T` is deprecated. Reason
   1 | 
   2 |         export type { T, U } from './deprecated';
     |                       ~
   3 |       
---

[TestNoDeprecatedRule/invalid-142 - 1]
Diagnostic 1: deprecated (2:40 - 2:42)
Message: `bar` is deprecated.
   1 | 
   2 |         export { deprecatedFunction as bar } from './deprecated';
     |                                        ~~~
   3 |       
---

[TestNoDeprecatedRule/invalid-143 - 1]
Diagnostic 1: deprecated (8:15 - 8:25)
Message: `searchPaths` is deprecated.
   7 |         const child = new Child();
   8 |         child.searchPaths();
     |               ~~~~~~~~~~~
   9 |       
---

[TestNoDeprecatedRule/invalid-144 - 1]
Diagnostic 1: deprecatedWithReason (8:15 - 8:25)
Message: `searchPaths` is deprecated. use newMethod() instead
   7 |         const child = new Child();
   8 |         child.searchPaths();
     |               ~~~~~~~~~~~
   9 |       
---

[TestNoDeprecatedRule/invalid-145 - 1]
Diagnostic 1: deprecatedWithReason (24:11 - 24:12)
Message: `""` is deprecated. Use code instead.
  23 |         showError({
  24 |           "": 500,
     |           ~~
  25 |         });

Diagnostic 2: deprecatedWithReason (28:11 - 28:14)
Message: `""` is deprecated. Use code instead.
  27 |         showError({
  28 |           [""]: 500,
     |           ~~~~
  29 |         });

Diagnostic 3: deprecatedWithReason (32:11 - 32:21)
Message: `""` is deprecated. Use code instead.
  31 |         showError({
  32 |           [emptyName]: 500,
     |           ~~~~~~~~~~~
  33 |         });

Diagnostic 4: deprecatedWithReason (36:11 - 36:20)
Message: `statusCode` is deprecated. Use status instead.
  35 |         showError({
  36 |           statusCode: 500,
     |           ~~~~~~~~~~
  37 |         });

Diagnostic 5: deprecatedWithReason (40:11 - 40:20)
Message: `statusCode` is deprecated. Use status instead.
  39 |         showError({
  40 |           statusCode,
     |           ~~~~~~~~~~
  41 |         });

Diagnostic 6: deprecatedWithReason (44:11 - 44:24)
Message: `statusCode` is deprecated. Use status instead.
  43 |         showError({
  44 |           ['statusCode']: 500,
     |           ~~~~~~~~~~~~~~
  45 |         });

Diagnostic 7: deprecatedWithReason (48:11 - 48:26)
Message: `statusCode` is deprecated. Use status instead.
  47 |         showError({
  48 |           [statusCodeName]: 500,
     |           ~~~~~~~~~~~~~~~~
  49 |         });

Diagnostic 8: deprecatedWithReason (52:15 - 52:24)
Message: `statusCode` is deprecated. Use status instead.
  51 |         showError({
  52 |           get statusCode() {
     |               ~~~~~~~~~~
  53 |             return 500;

Diagnostic 9: deprecatedWithReason (58:15 - 58:24)
Message: `statusCode` is deprecated. Use status instead.
  57 |         showError({
  58 |           set statusCode(value: number) {},
     |               ~~~~~~~~~~
  59 |         });

Diagnostic 10: deprecatedWithReason (62:11 - 62:20)
Message: `statusCode` is deprecated. Use status instead.
  61 |         showMethodError({
  62 |           statusCode() {
     |           ~~~~~~~~~~
  63 |             return 500;
---

[TestNoDeprecatedRule/invalid-146 - 1]
Diagnostic 1: deprecatedWithReason (12:11 - 12:20)
Message: `statusCode` is deprecated. Use status instead.
  11 |         showError({
  12 |           statusCode: 500,
     |           ~~~~~~~~~~
  13 |         });
---

[TestNoDeprecatedRule/invalid-147 - 1]
Diagnostic 1: deprecated (9:7 - 9:11)
Message: `field` is deprecated.
   8 | }
   9 | bar({ field: 0 });
     |       ~~~~~
---

[TestNoDeprecatedRule/invalid-148 - 1]
Diagnostic 1: deprecated (9:18 - 9:22)
Message: `field` is deprecated.
   8 | }
   9 | const jsx = <Foo field={0} />;
     |                  ~~~~~
---
